[gd_scene load_steps=14 format=3 uid="uid://cgfnwtxbl14yp"]

[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_c0o5c"]
[ext_resource type="Script" path="res://Scripts/ResultsText.gd" id="2_s0ige"]
[ext_resource type="Script" path="res://Scripts/DrawingGrader.gd" id="3_pjotv"]
[ext_resource type="Script" path="res://Scripts/BulletHell/ProjectileGenerator.gd" id="4_spvna"]
[ext_resource type="PackedScene" uid="uid://ckt2ug7d6uwrw" path="res://Scenes/WaterProjectile.tscn" id="5_1lsps"]
[ext_resource type="Script" path="res://Scripts/BulletHell/ProjectileGeneratorStep.gd" id="6_fk5yi"]
[ext_resource type="Script" path="res://Scripts/BulletHell/SpawnPointGenerator.gd" id="7_h32k8"]
[ext_resource type="PackedScene" uid="uid://cwmt167siurh6" path="res://Scenes/Player.tscn" id="8_semi7"]
[ext_resource type="Texture2D" uid="uid://d18tb4gbtrcct" path="res://Sprites/Background.png" id="9_io5vt"]

[sub_resource type="CanvasTexture" id="CanvasTexture_a0bh2"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0wrkl"]

[sub_resource type="Resource" id="Resource_2w8dj"]
script = ExtResource("6_fk5yi")
skip = false
spawn_position_parent_path = NodePath("SpawnPointGenerator")
projectile_scene = ExtResource("5_1lsps")
aim_rotation_source_path = NodePath("")
aim_type = 0
position_offset = Vector2(0, 0)
rotation_offset_degrees = 0.0
spawn_delay = 0.0
transition_delay = 0.65
spawn_cycles = 1
step_cycles = 1
sound_effect_name = ""
sound_type = 0

[sub_resource type="Resource" id="Resource_6wutw"]
script = ExtResource("6_fk5yi")
skip = false
spawn_position_parent_path = NodePath("SpawnPointGenerator2")
projectile_scene = ExtResource("5_1lsps")
aim_rotation_source_path = NodePath("")
aim_type = 0
position_offset = Vector2(0, 0)
rotation_offset_degrees = 0.0
spawn_delay = 0.0
transition_delay = 0.65
spawn_cycles = 1
step_cycles = 1
sound_effect_name = ""
sound_type = 0

[node name="Level" type="Node2D"]
script = ExtResource("1_c0o5c")
metadata/_edit_vertical_guides_ = [1.0]
metadata/_edit_horizontal_guides_ = []

[node name="ResultsUI" type="CanvasLayer" parent="."]
layer = 2

[node name="Background" type="TextureRect" parent="ResultsUI"]
modulate = Color(0, 0, 0, 0.490196)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = SubResource("CanvasTexture_a0bh2")

[node name="ResultsPanel" type="Panel" parent="ResultsUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -71.0
offset_right = 71.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ResultsUI/ResultsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 3.0
offset_right = -4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="ResultsUI/ResultsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="ResultsHeader" type="Label" parent="ResultsUI/ResultsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Results:"
horizontal_alignment = 1

[node name="Results" type="Label" parent="ResultsUI/ResultsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.92
text = "The Results go here but they don't exist yet"
horizontal_alignment = 1
autowrap_mode = 3
script = ExtResource("2_s0ige")

[node name="RestartLevelButton" type="Button" parent="ResultsUI/ResultsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.71
text = "Retry"

[node name="NextButton" type="Button" parent="ResultsUI/ResultsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.71
text = "Next"

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="DoneButton" type="Button" parent="GameUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -23.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
text = "Done!"

[node name="RestartButton" type="Button" parent="GameUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -53.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Restart"

[node name="Walls" type="StaticBody2D" parent="." groups=["Wall"]]
metadata/_edit_lock_ = true

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2(56, 144)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_0wrkl")
metadata/_edit_lock_ = true

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(144, 257)
shape = SubResource("WorldBoundaryShape2D_0wrkl")
metadata/_edit_lock_ = true

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2(233, 144)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_0wrkl")
metadata/_edit_lock_ = true

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(144, 28)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_0wrkl")
metadata/_edit_lock_ = true

[node name="DrawingGrader" type="Node" parent="." node_paths=PackedStringArray("drawing_line_parent")]
script = ExtResource("3_pjotv")
drawing_line_parent = NodePath("../Drawings/PlayerLineParent")

[node name="Drawings" type="Node" parent="."]

[node name="PlayerLineParent" type="Node" parent="Drawings"]

[node name="ProjectileGenerator" type="Node2D" parent="." node_paths=PackedStringArray("projectile_parent")]
script = ExtResource("4_spvna")
projectile_parent = NodePath("ProjectileParent")
steps = Array[ExtResource("6_fk5yi")]([SubResource("Resource_2w8dj"), SubResource("Resource_6wutw")])

[node name="ProjectileParent" type="Node" parent="ProjectileGenerator"]

[node name="SpawnPointGenerator" type="Node2D" parent="ProjectileGenerator"]
position = Vector2(68, -18)
script = ExtResource("7_h32k8")
enabled = true
point_count = 4
init_rotation = 90.0
position_offset = Vector2(42, 0)

[node name="0" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator"]
rotation = 1.5708

[node name="1" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator"]
position = Vector2(42, 0)
rotation = 1.5708

[node name="2" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator"]
position = Vector2(84, 0)
rotation = 1.5708

[node name="3" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator"]
position = Vector2(126, 0)
rotation = 1.5708

[node name="SpawnPointGenerator2" type="Node2D" parent="ProjectileGenerator"]
position = Vector2(68, -18)
script = ExtResource("7_h32k8")
enabled = true
point_count = 4
init_position = Vector2(23, 0)
init_rotation = 90.0
position_offset = Vector2(42, 0)

[node name="0" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator2"]
position = Vector2(23, 0)
rotation = 1.5708

[node name="1" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator2"]
position = Vector2(65, 0)
rotation = 1.5708

[node name="2" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator2"]
position = Vector2(107, 0)
rotation = 1.5708

[node name="3" type="Marker2D" parent="ProjectileGenerator/SpawnPointGenerator2"]
position = Vector2(149, 0)
rotation = 1.5708

[node name="Player" parent="." node_paths=PackedStringArray("line_parent") instance=ExtResource("8_semi7")]
line_parent = NodePath("../Drawings/PlayerLineParent")

[node name="Background" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(144, 144)
texture = ExtResource("9_io5vt")
metadata/_edit_lock_ = true

[connection signal="game_ended" from="." to="DrawingGrader" method="_on_game_ended"]
[connection signal="game_ended" from="." to="ProjectileGenerator" method="_on_game_ended"]
[connection signal="game_ended" from="." to="Player" method="_on_game_ended"]
[connection signal="game_started" from="." to="ProjectileGenerator" method="_on_game_started"]
[connection signal="pressed" from="ResultsUI/ResultsPanel/VBoxContainer/RestartLevelButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ResultsUI/ResultsPanel/VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="GameUI/DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="pressed" from="GameUI/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="results_created" from="DrawingGrader" to="ResultsUI/ResultsPanel/VBoxContainer/Results" method="_on_results_created"]
[connection signal="pen_grabbed" from="Player" to="." method="_on_pen_grabbed"]
